--- a/SupportLink/Views/TicketUpdates/Index.cshtml
+++ b/SupportLink/Views/TicketUpdates/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UpdateDetails)
+                @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UpdatedAt)
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.UpdatedBy.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UpdateDetails)
+                @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UpdatedAt)
