--- a/SupportLink/Views/TicketUpdates/Create.cshtml
+++ b/SupportLink/Views/TicketUpdates/Create.cshtml
@@ -21,9 +21,12 @@
                 <select asp-for="UpdatedById" class ="form-control" asp-items="ViewBag.UpdatedById"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UpdateDetails" class="control-label"></label>
-                <input asp-for="UpdateDetails" class="form-control" />
-                <span asp-validation-for="UpdateDetails" class="text-danger"></span>
+                <label asp-for="Status" class="control-label"></label>
+                <select asp-for="Status"
+                        asp-items="Html.GetEnumSelectList<SupportLink.Models.UpdateStatus>()"
+                        class="form-control">
+                </select>
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UpdatedAt" class="control-label"></label>
