--- a/SupportLink/Views/TicketUpdates/Details.cshtml
+++ b/SupportLink/Views/TicketUpdates/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.UpdatedBy.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdateDetails)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdateDetails)
+            @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UpdatedAt)
