--- a/SupportLink/Views/TicketUpdates/Edit.cshtml
+++ b/SupportLink/Views/TicketUpdates/Edit.cshtml
@@ -24,9 +24,12 @@
                 <span asp-validation-for="UpdatedById" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UpdateDetails" class="control-label"></label>
-                <input asp-for="UpdateDetails" class="form-control" />
-                <span asp-validation-for="UpdateDetails" class="text-danger"></span>
+                <label asp-for="Status" class="control-label"></label>
+                <select asp-for="Status"
+                        asp-items="Html.GetEnumSelectList<SupportLink.Models.UpdateStatus>()"
+                        class="form-control">
+                </select>
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UpdatedAt" class="control-label"></label>
