--- a/SupportLink/Views/Shared/_Layout.cshtml
+++ b/SupportLink/Views/Shared/_Layout.cshtml
@@ -26,7 +26,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BestLife.styles.css" asp-append-version="true" />
     <!-- Add in <head> of _Layout.cshtml -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <!-- Google Font: Source Sans Pro -->
@@ -101,7 +100,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <div class="container-fluid">
-                            <img src="~/images/Amtech.png" alt="Amtech" class="logo-img" />
+                            <img src="~/images/Amtech.jfif" alt="Amtech" class="logo-img" />
                         </div>
 
                         <!-- Dashboard: everyone can see -->
@@ -212,7 +211,7 @@
     <script src="~/AdminLTE/plugins/sparklines/sparkline.js"></script>
     <!-- JQVMap -->
     <script src="~/AdminLTE/plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="~/AdminLTE/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
     <!-- jQuery Knob Chart -->
     <script src="~/AdminLTE/plugins/jquery-knob/jquery.knob.min.js"></script>
     <!-- daterangepicker -->
