--- a/SupportLink/Views/SupportTickets/Details.cshtml
+++ b/SupportLink/Views/SupportTickets/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.IssueCategory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IssueCategory)
+            @Html.DisplayFor(model => model.IssueCategory.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
@@ -50,7 +50,7 @@
             @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
+            @Html.DisplayFor(model => model.Status.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AssignedAgent)
