--- a/SupportLink/Views/SupportTickets/Edit.cshtml
+++ b/SupportLink/Views/SupportTickets/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="OrganizationId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IssueCategory" class="control-label"></label>
-                <input asp-for="IssueCategory" class="form-control" />
-                <span asp-validation-for="IssueCategory" class="text-danger"></span>
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
@@ -44,9 +44,9 @@
                 <span asp-validation-for="UploadFile" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <label asp-for="StatusId" class="control-label"></label>
+                <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
+                <span asp-validation-for="StatusId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AssignedAgentId" class="control-label"></label>
